@@ -169,6 +169,7 @@ function table_create_descriptor($tablename){
 		$item['name']=$row['Field'];
 		$item['type']=$row['Type'];
 		if ($row['Null']=="Yes") $item['null'] = true;
+debug($row['Field']."-".$row['Default']);
 		if (trim($row['Default'])!="") $item['default']=$row['Default'];
 		if (trim($row['Extra'])!=="") $item['extra']=$row['Extra'];
 		$descriptor[$item['name']] = $item;
@@ -239,8 +240,7 @@ function descriptor_createsql($input){
 		$return = $input['name']." "
 			.$input['type']
 			.(isset($input['null']) && $input['null']?"":" NOT NULL")
-			.(isset($input['default']) &&
-					$input['default']>""?" default '{$input['default']}'":"")
+			.(isset($input['default'])?" default '{$input['default']}'":"")
 			." ".$input['extra'];
 	}
 	return $return;
